--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,5 @@
 androidAppPath=src/test/resources/apps/QAcart-To-Do.apk
 androidAutomationName=UiAutomator2
 appiumServerLink=http://localhost:4723/wd/hub
+appiumJSFile=C:/Users/moham/AppData/Roaming/npm/node_modules/appium/build/lib/main.js
+nodePath=C:/Program Files/nodejs/node.exe
